# crispdesk

./: .gitignore  CLAUDE.md  PROTOCOL.md  README.md
.github/workflows/: ci.yml
rcd-client/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json
rcd-client/scripts/: mark-esm.mjs
rcd-client/src/: main.ts  preload.ts
rcd-client/src/renderer/: renderer.ts  wire.ts
rcd-client/test/: wire.test.mjs
rcd-host/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
rcd-host/src/: abr.rs  audit.rs  clipboard.rs  control.rs  embedded_signaling.rs  env.rs  files.rs  input.rs  main.rs  monitors.rs  pipeline.rs  probe.rs  sendchan.rs  signaling.rs  webrtc.rs
rcd-signal/: README.md  package-lock.json  package.json  smoke-test.mjs  tsconfig.json
rcd-signal/src/: pairing.ts  server.ts
rcd-signal/test/: origin.test.mjs  pairing.test.mjs
